refactor: replace List.of() with Collections.emptyList() for empty lore returns