@@ -8,6 +8,7 @@ import org.bukkit.inventory.ItemStack;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.Collections;
 import java.util.List;
 
 public class ComponentItemStackPlatformHelper extends ItemStackPlatformHelper {
@@ -44,11 +45,11 @@ public class ComponentItemStackPlatformHelper extends ItemStackPlatformHelper {
     public @NotNull List<@NotNull String> getLore(@NotNull ItemStack itemStack) {
         Preconditions.checkNotNull(itemStack, "itemStack cannot be null");
         if (!itemStack.hasItemMeta() || !itemStack.getItemMeta().hasLore()) {
-            return List.of();
+            return Collections.emptyList();
         }
         List<Component> lore = itemStack.getItemMeta().lore();
         if (lore == null || lore.isEmpty()) {
-            return List.of();
+            return Collections.emptyList();
         }
         return lore.stream()
                 .map(this.componentMeta::getMiniMessage)
